Add locale config option